--- a/requirements.txt
+++ b/requirements.txt
@@ -32,5 +32,5 @@ psycogreen==1.0.2
 psycopg2==2.9.6
 redis==4.5.4
 requests==2.28.2
-safe-eth-py[django]==5.2.1
+neon-safe-eth[django]==5.1.0
 web3==5.31.3
