--- a/.github/workflows/python.yml
+++ b/.github/workflows/python.yml
@@ -3,7 +3,7 @@ on:
   push:
     branches:
       - master
-      - develop
+      - dev
   pull_request:
   release:
     types: [ released ]
@@ -91,23 +91,23 @@ jobs:
       run: coveralls --service=github
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}  # Required for coveralls
+        
   docker-deploy:
     runs-on: ubuntu-latest
     needs:
-      - linting
       - test-app
-    if: github.ref == 'refs/heads/master' || github.ref == 'refs/heads/develop' || (github.event_name == 'release' && github.event.action == 'released')
+    if: github.ref == 'refs/heads/master' || github.ref == 'refs/heads/dev' || (github.event_name == 'release' && github.event.action == 'released')
     steps:
     - uses: actions/checkout@v3
     - uses: docker/setup-qemu-action@v2
       with:
-        platforms: arm64
+        platforms: amd64
     - uses: docker/setup-buildx-action@v2
     - name: Dockerhub login
       uses: docker/login-action@v2
       with:
         username: ${{ secrets.DOCKER_USER }}
-        password: ${{ secrets.DOCKER_PASSWORD }}
+        password: ${{ secrets.DOCKER_PASS }}
     - name: Deploy Master
       if: github.ref == 'refs/heads/master'
       uses: docker/build-push-action@v4
@@ -115,23 +115,21 @@ jobs:
         context: .
         file: docker/web/Dockerfile
         push: true
-        tags: safeglobal/safe-transaction-service:staging
+        tags: neonlabsorg/gnosis-neon-transaction-service:staging
         platforms: |
           linux/amd64
-          linux/arm64
         cache-from: type=gha
         cache-to: type=gha,mode=max
     - name: Deploy Develop
-      if: github.ref == 'refs/heads/develop'
+      if: github.ref == 'refs/heads/dev'
       uses: docker/build-push-action@v4
       with:
         context: .
         file: docker/web/Dockerfile
         push: true
-        tags: safeglobal/safe-transaction-service:develop
+        tags: neonlabsorg/gnosis-neon-transaction-service:dev
         platforms: |
           linux/amd64
-          linux/arm64
         cache-from: type=gha
         cache-to: type=gha,mode=max
     - name: Deploy Tag
@@ -142,30 +140,9 @@ jobs:
         file: docker/web/Dockerfile
         push: true
         tags: |
-          safeglobal/safe-transaction-service:${{ github.event.release.tag_name }}
-          safeglobal/safe-transaction-service:latest
+          neonlabsorg/gnosis-neon-transaction-service:${{ github.event.release.tag_name }}
+          neonlabsorg/gnosis-neon-transaction-service:latest
         platforms: |
           linux/amd64
-          linux/arm64
         cache-from: type=gha
         cache-to: type=gha,mode=max
-  autodeploy:
-    runs-on: ubuntu-latest
-    needs: [docker-deploy]
-    if: github.ref == 'refs/heads/master' || github.ref == 'refs/heads/develop'
-    steps:
-    - uses: actions/checkout@v3
-    - name: Deploy Staging
-      if: github.ref == 'refs/heads/master'
-      run: bash scripts/autodeploy.sh
-      env:
-        AUTODEPLOY_URL: ${{ secrets.AUTODEPLOY_URL }}
-        AUTODEPLOY_TOKEN: ${{ secrets.AUTODEPLOY_TOKEN }}
-        TARGET_ENV: "staging"
-    - name: Deploy Develop
-      if: github.ref == 'refs/heads/develop'
-      run: bash scripts/autodeploy.sh
-      env:
-        AUTODEPLOY_URL: ${{ secrets.AUTODEPLOY_URL }}
-        AUTODEPLOY_TOKEN: ${{ secrets.AUTODEPLOY_TOKEN }}
-        TARGET_ENV: "develop"
