--- a/requirements.txt
+++ b/requirements.txt
@@ -31,5 +31,5 @@ psycogreen==1.0.2
 psycopg2==2.9.6
 redis==4.5.5
 requests==2.31.0
-safe-eth-py[django]==5.4.3
+gnosis-neon-safe-eth-py[django]==5.3.1
 web3==6.4.0
