--- a/.github/workflows/python.yml
+++ b/.github/workflows/python.yml
@@ -10,7 +10,7 @@ on:
 
 jobs:
   linting:
-    runs-on: ubuntu-latest
+    runs-on: ["self-hosted", "k8s-prod"]
     strategy:
       matrix:
         python-version: ["3.10"]
@@ -27,7 +27,7 @@ jobs:
         run: pre-commit run --all-files
 
   test-app:
-    runs-on: ubuntu-latest
+    runs-on: ["self-hosted", "k8s-prod"]
     strategy:
       matrix:
         python-version: ["3.10"]
@@ -92,7 +92,7 @@ jobs:
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}  # Required for coveralls
   docker-deploy:
-    runs-on: ubuntu-latest
+    runs-on: ["self-hosted", "k8s-prod"]
     needs:
       - test-app
     if: github.ref == 'refs/heads/master' || github.ref == 'refs/heads/develop' || (github.event_name == 'release' && github.event.action == 'released')
@@ -149,7 +149,7 @@ jobs:
         cache-from: type=gha
         cache-to: type=gha,mode=max
   autodeploy:
-    runs-on: ubuntu-latest
+    runs-on: ["self-hosted", "k8s-prod"]
     needs: [docker-deploy]
     if: github.ref == 'refs/heads/master' || github.ref == 'refs/heads/develop'
     steps:
